--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/num_donations" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/donation_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -76,7 +76,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.191"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/donation_value" />
 
     <TextView
         android:id="@+id/textView7"
@@ -208,13 +208,14 @@
         app:layout_constraintTop_toBottomOf="@+id/liability_link_one" />
 
     <TextView
-        android:id="@+id/profile_email"
+        android:id="@+id/contact_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="TextView"
+        android:text="Contact Us"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contact_us" />
