--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <ProgressBar
-        android:id="@+id/progressBar2"
+        android:id="@+id/loading"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
