--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,18 +6,32 @@
         android:enabled="true"
         android:icon="@drawable/ic_action_donate"
         android:title="Donate"
+        android:visible="true"
+        app:labelVisibilityMode="labeled"
         app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_history"
         android:enabled="true"
         android:icon="@drawable/ic_action_history"
-        android:title="Historh"
+        android:title="History"
+        android:visible="true"
+        app:labelVisibilityMode="labeled"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_data"
         android:enabled="true"
         android:icon="@drawable/ic_action_data"
         android:title="Data"
+        android:visible="true"
+        app:labelVisibilityMode="labeled"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_profile"
+        android:enabled="true"
+        android:icon="@drawable/ic_action_profile"
+        android:title="Profile"
+        android:visible="true"
         app:showAsAction="ifRoom" />
 
 </menu>
