--- a/app/src/main/res/layout/view_transaction.xml
+++ b/app/src/main/res/layout/view_transaction.xml
@@ -55,7 +55,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/beach" />
+            app:srcCompat="@drawable/nachoes" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
