--- a/app/src/main/res/layout/view_transaction.xml
+++ b/app/src/main/res/layout/view_transaction.xml
@@ -23,7 +23,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="Status"
-            android:textSize="10sp"
+            android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.004"
             app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -37,14 +37,14 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="Food Item"
-            android:textSize="14sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.004"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/status" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/foodImage"
             android:layout_width="76dp"
             android:layout_height="67dp"
             android:layout_marginStart="8dp"
@@ -72,7 +72,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="Date"
-            android:textSize="10sp"
+            android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.004"
             app:layout_constraintStart_toStartOf="@+id/guideline"
