--- a/app/src/main/res/layout/charity.xml
+++ b/app/src/main/res/layout/charity.xml
@@ -10,8 +10,7 @@
         android:id="@+id/match"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="24dp"
         android:background="@color/colorPrimary"
         android:text="MATCH"
         android:textColor="@android:color/white"
@@ -20,9 +19,7 @@
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="@+id/charity"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/charity"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="@+id/charity" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -41,7 +38,7 @@
         android:layout_width="346dp"
         android:layout_height="82dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="336dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Food to You Mobile Food Pantry"
         android:textAlignment="center"
@@ -51,25 +48,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/charity" />
 
     <Button
         android:id="@+id/okay"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="63dp"
         android:text="@android:string/ok"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/success"
-        app:layout_constraintEnd_toEndOf="@+id/success"
-        app:layout_constraintStart_toStartOf="@+id/success" />
+        app:layout_constraintEnd_toEndOf="@+id/textView16"
+        app:layout_constraintStart_toStartOf="@+id/textView16"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <ImageView
         android:id="@+id/charity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -88,10 +87,80 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.586"
         app:srcCompat="@drawable/charity_success_message" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="381dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:text="Food To You Mobile Food Pantry is a way to get groceries and household items to those who need them on a weekly basis by distributing them in the neighborhoods after daytime work hours."
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/charity"
+        app:layout_constraintStart_toStartOf="@+id/charity"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Prefers Macaroni and Cheese, Cereal, Peanut Butter, Pasta, Tuna"
+        app:layout_constraintEnd_toEndOf="@+id/charity"
+        app:layout_constraintStart_toStartOf="@+id/charity"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0.5miles"
+        app:layout_constraintBottom_toTopOf="@+id/charity"
+        app:layout_constraintStart_toStartOf="@+id/charity"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="Picks up from you"
+        app:layout_constraintBottom_toTopOf="@+id/charity"
+        app:layout_constraintEnd_toStartOf="@+id/textView15"
+        app:layout_constraintStart_toEndOf="@+id/textView13" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Accepts deliveries"
+        app:layout_constraintBottom_toTopOf="@+id/charity"
+        app:layout_constraintEnd_toEndOf="@+id/charity"
+        app:layout_constraintStart_toEndOf="@+id/textView14" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="24dp"
+        android:background="#FFFFFF"
+        android:text="Thank You! \n \n We have sent a message to the food bank or pantry with your available donation. We’ll let you know when they will come pick up the food.  \n \n Thanks for your contribution!"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/charity"
+        app:layout_constraintStart_toStartOf="@+id/charity"
+        app:layout_constraintTop_toTopOf="@+id/charity" />
 
 </android.support.constraint.ConstraintLayout>
