--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -124,7 +124,7 @@
             app:layout_constraintTop_toBottomOf="@+id/view3" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/send_donation_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
