--- a/app/src/main/res/layout/charity.xml
+++ b/app/src/main/res/layout/charity.xml
@@ -57,7 +57,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginBottom="63dp"
         android:text="@android:string/ok"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/success"
         app:layout_constraintEnd_toEndOf="@+id/textView16"
         app:layout_constraintStart_toStartOf="@+id/textView16"
@@ -158,7 +158,7 @@
         android:textAlignment="center"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/charity"
         app:layout_constraintStart_toStartOf="@+id/charity"
         app:layout_constraintTop_toTopOf="@+id/charity" />
