--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -73,24 +73,14 @@
             app:layout_constraintStart_toEndOf="@+id/textView6"
             app:layout_constraintTop_toBottomOf="@+id/view" />
 
-        <View
-            android:id="@+id/view2"
-            android:layout_width="272dp"
-            android:layout_height="152dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
-
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="36dp"
             android:text="Looks like you're sending..."
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view2" />
+            tools:layout_editor_absoluteY="405dp" />
 
         <View
             android:id="@+id/view3"
@@ -138,5 +128,43 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="287dp"
+            android:layout_height="153dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="234dp"
+            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+        <!--<com.wonderkiln.camerakit.CameraView-->
+            <!--android:id="@+id/camera_view"-->
+
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="539dp"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:layout_marginEnd="8dp"-->
+            <!--android:layout_marginBottom="8dp"-->
+            <!--android:adjustViewBounds="true"-->
+            <!--app:layout_constraintBottom_toTopOf="@+id/btn_detect"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent">-->
+
+        <!--</com.wonderkiln.camerakit.CameraView>-->
+
+        <Button
+            android:id="@+id/btn_detect"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="555dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="DETECT"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/scrollView2" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
