--- a/app/src/main/res/layout/charity.xml
+++ b/app/src/main/res/layout/charity.xml
@@ -22,6 +22,7 @@
         app:layout_constraintStart_toStartOf="@+id/charity" />
 
     <android.support.design.widget.BottomNavigationView
+        app:labelVisibilityMode="labeled"
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
